--- a/main.css
+++ b/main.css
@@ -3,4 +3,5 @@ header{
     background: url("./images/header.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
 }
